<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/bck">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/welcome_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/welcome_note"
            android:textColor="@color/colorNaslovna"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/izaberi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choose_level"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/lagano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="123dp"
            android:onClick="klik_lagano"/>

        <Button
            android:id="@+id/srednje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            tools:layout_editor_absoluteX="90dp"
            tools:layout_editor_absoluteY="123dp"
            android:onClick="klik_srednje"/>

        <Button
            android:id="@+id/tesko"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            tools:layout_editor_absoluteX="186dp"
            tools:layout_editor_absoluteY="123dp"
            android:onClick="klik_tesko"/>
    </LinearLayout>

    <Button
        android:id="@+id/best_of"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/najbolji"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="123dp"
        android:onClick="prebaci"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>